objects/Clock_in_Billing_Values__mdt.object
<CustomObject>
    <description>Used in Flow: FSL Clock in mobile and desktop for dynamically populating the billing type values based on the user ERP type</description>
    <fields>
        <fullName>BMS_Billing_Type_Value__c</fullName>
        <label>BMS Billing Type Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATO-AUTHORIZED TIME OFF</fullName>
                    <default>true</default>
                    <label>ATO-AUTHORIZED TIME OFF</label>
                </value>
                <value>
                    <fullName>AU-NO CALL ABSENCE</fullName>
                </value>
                <value>
                    <fullName>BC-BRANCH CLOSURE- WITH PAY</fullName>
                </value>
                <value>
                    <fullName>BT-BIRTHDAY</fullName>
                </value>
                <value>
                    <fullName>BW-BAD WEATHER</fullName>
                </value>
                <value>
                    <fullName>CTO-COMPREHENSIVE TIME OFF</fullName>
                </value>
                <value>
                    <fullName>DPN-DISCIPLINARY ACTION - NO</fullName>
                </value>
                <value>
                    <fullName>DT-DOUBLE TIME</fullName>
                </value>
                <value>
                    <fullName>EEEC-COMMUNITY INVOLVEMENT HRS</fullName>
                </value>
                <value>
                    <fullName>FH-FLOAT HOL</fullName>
                </value>
                <value>
                    <fullName>FP-FUNERAL TIME - PAID</fullName>
                </value>
                <value>
                    <fullName>FS-FIELD SERVICE TIME</fullName>
                </value>
                <value>
                    <fullName>HD-HOLIDAY - PAID</fullName>
                </value>
                <value>
                    <fullName>IT-INDUSTRIAL THERAPY</fullName>
                </value>
                <value>
                    <fullName>JD-JURY DUTY TIME</fullName>
                </value>
                <value>
                    <fullName>LT-LEAD HAND TIME- ROTATING</fullName>
                </value>
                <value>
                    <fullName>MLN-MILITARY LEAVE - NO PAY</fullName>
                </value>
                <value>
                    <fullName>NWA-NO WORK AVAILABLE</fullName>
                </value>
                <value>
                    <fullName>OT-OVERTIME</fullName>
                </value>
                <value>
                    <fullName>PDN-PANDEMIC- NO PAY</fullName>
                </value>
                <value>
                    <fullName>PDP-PANDEMIC- PAID</fullName>
                </value>
                <value>
                    <fullName>PL-PARENTAL LEAVE</fullName>
                </value>
                <value>
                    <fullName>PP-WEEKEND PAGER PAY</fullName>
                </value>
                <value>
                    <fullName>PT-PERSONAL TIME-PAID</fullName>
                </value>
                <value>
                    <fullName>PTO-PAID TIME OFF- CNW OLY</fullName>
                </value>
                <value>
                    <fullName>RT-REGULAR TIME</fullName>
                </value>
                <value>
                    <fullName>SAT-SATURDAY</fullName>
                </value>
                <value>
                    <fullName>SATF-SATURDAY FIELD SERVICE</fullName>
                </value>
                <value>
                    <fullName>SDO-SCHEDULED DAY OFF-NO PAY</fullName>
                </value>
                <value>
                    <fullName>SNP-SICK - NO PAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MoveX_UK_Billing_Type__c</fullName>
        <label>MoveX UK Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001-Chargeable Labour</fullName>
                </value>
                <value>
                    <fullName>901-Internal Administration</fullName>
                </value>
                <value>
                    <fullName>904-Awaiting Parts</fullName>
                </value>
                <value>
                    <fullName>905-Awaiting Instructions</fullName>
                </value>
                <value>
                    <fullName>906-Training</fullName>
                </value>
                <value>
                    <fullName>907-Maintenance</fullName>
                </value>
                <value>
                    <fullName>909-Customer Visits</fullName>
                </value>
                <value>
                    <fullName>910-Unauthorised Absence</fullName>
                </value>
                <value>
                    <fullName>911-Forklift Driving</fullName>
                </value>
                <value>
                    <fullName>912-Non Chargeable Travel</fullName>
                </value>
                <value>
                    <fullName>914-Apprentice Training</fullName>
                </value>
                <value>
                    <fullName>915-Internal Trainers</fullName>
                </value>
                <value>
                    <fullName>916-Training - Technical</fullName>
                </value>
                <value>
                    <fullName>917-Training - Personal Development</fullName>
                </value>
                <value>
                    <fullName>918-Training - Health, Safety &amp; Environment</fullName>
                </value>
                <value>
                    <fullName>919-Training - Corporate &amp; Mandatory</fullName>
                </value>
                <value>
                    <fullName>920-HS&amp;E - Lock Out Tag Out, Job Safety</fullName>
                </value>
                <value>
                    <fullName>902-Holiday</fullName>
                    <isActive>false</isActive>
                    <label>902-Holiday</label>
                </value>
                <value>
                    <fullName>903-Sickness</fullName>
                    <isActive>false</isActive>
                    <label>903-Sickness</label>
                </value>
                <value>
                    <fullName>908-Authorised Absense</fullName>
                    <isActive>false</isActive>
                    <label>908-Authorised Absense</label>
                </value>
                <value>
                    <fullName>913-Flex Contract Adjustment</fullName>
                    <isActive>false</isActive>
                    <label>913-Flex Contract Adjustment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_X_SPAC_Billing_Type_Value__c</fullName>
        <label>Move-X SPAC Billing Type Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>101-TOOL STORE</fullName>
                    <default>true</default>
                    <label>101-TOOL STORE</label>
                </value>
                <value>
                    <fullName>102-TRAINING</fullName>
                </value>
                <value>
                    <fullName>103-TRAINING APPRENTICE</fullName>
                </value>
                <value>
                    <fullName>104-STAND BY TIME</fullName>
                </value>
                <value>
                    <fullName>105-10HR BREAK</fullName>
                </value>
                <value>
                    <fullName>106-PUBLIC RELATIONS</fullName>
                </value>
                <value>
                    <fullName>107-SUPERVISION</fullName>
                </value>
                <value>
                    <fullName>108-CLEANING</fullName>
                </value>
                <value>
                    <fullName>109-CLERICAL</fullName>
                </value>
                <value>
                    <fullName>110-INJURY</fullName>
                </value>
                <value>
                    <fullName>111-LEAVE</fullName>
                </value>
                <value>
                    <fullName>112-LEAVE OTHER</fullName>
                </value>
                <value>
                    <fullName>113-MEETINGS</fullName>
                </value>
                <value>
                    <fullName>114-OH&amp;S</fullName>
                </value>
                <value>
                    <fullName>115-LEAVE SICK</fullName>
                </value>
                <value>
                    <fullName>116-MAINT BUILDING</fullName>
                </value>
                <value>
                    <fullName>117-MAINT CHASSIS DYNO</fullName>
                </value>
                <value>
                    <fullName>118-MAINT SERVICE VEHICLE</fullName>
                </value>
                <value>
                    <fullName>119-MAINT FORKLIFT</fullName>
                </value>
                <value>
                    <fullName>120-MAINT GROUND</fullName>
                </value>
                <value>
                    <fullName>121-OPENS UPS</fullName>
                </value>
                <value>
                    <fullName>122-PARTS PICK UP</fullName>
                </value>
                <value>
                    <fullName>123-STORES EXPENSE</fullName>
                </value>
                <value>
                    <fullName>124-MAINT TOOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_X_SPAC_Billing_Type__c</fullName>
        <label>Move-X SPAC Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>201-APPRENTICE TRAINING TAFE</fullName>
                </value>
                <value>
                    <fullName>202-APPRENTICE TRAINING WORKSHOP</fullName>
                </value>
                <value>
                    <fullName>501-CLEANING</fullName>
                </value>
                <value>
                    <fullName>502-CLERICAL</fullName>
                </value>
                <value>
                    <fullName>601-INJURY MANAGEMENT/RESTRICTED DUTIES</fullName>
                </value>
                <value>
                    <fullName>602-INJURY PREVENTION</fullName>
                </value>
                <value>
                    <fullName>801-MAINTENANCE BULDING</fullName>
                </value>
                <value>
                    <fullName>802-MAINTENANCE CHASSIS DYNO</fullName>
                </value>
                <value>
                    <fullName>804-MAINTENANCE CLEANING EQUIPMENT</fullName>
                </value>
                <value>
                    <fullName>803-MAINTENANCE ENGINE DYNO</fullName>
                </value>
                <value>
                    <fullName>805-MAINTENANCE GROUND</fullName>
                </value>
                <value>
                    <fullName>807-MAINTENANCE SERVICE VEHICLE</fullName>
                </value>
                <value>
                    <fullName>806-MAINTENANCE TOOLS</fullName>
                </value>
                <value>
                    <fullName>402-MEETING OH&amp;S</fullName>
                </value>
                <value>
                    <fullName>401-MEETING STAFF</fullName>
                </value>
                <value>
                    <fullName>305-MINING INDUCTION</fullName>
                </value>
                <value>
                    <fullName>506-PUBLIC RELATIONS</fullName>
                </value>
                <value>
                    <fullName>503-STAND BY TIME</fullName>
                </value>
                <value>
                    <fullName>701-TALENT MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>504-TOOL STORE</fullName>
                </value>
                <value>
                    <fullName>303-TRAINING COURSES</fullName>
                </value>
                <value>
                    <fullName>302-TRAINING MANDATORY</fullName>
                </value>
                <value>
                    <fullName>301-TRAINING OH&amp;S</fullName>
                </value>
                <value>
                    <fullName>304-TRAINING WORKSHOP</fullName>
                </value>
                <value>
                    <fullName>505-WORKSHOP SUPERVISION</fullName>
                </value>
                <value>
                    <fullName>808-MAINTENANCE FORKLIFT</fullName>
                </value>
                <value>
                    <fullName>101-LEAVE ANNUAL</fullName>
                </value>
                <value>
                    <fullName>111-10HR</fullName>
                    <isActive>false</isActive>
                    <label>111-10HR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Clock-in Billing Values</label>
    <pluralLabel>Clock-in Billing Values</pluralLabel>
</CustomObject>